Test changes in css This is meant to check if this fix will correct issue on mobile devices.

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@ html, body {
     margin: 0;
     height: 100%;
     width: 100%;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 body {
